--- a/instagram-app/src/App.css
+++ b/instagram-app/src/App.css
@@ -11,3 +11,13 @@ p {
     font-size: 2rem;
     font-weight: bold;
   }
+
+  h3{
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  h4{
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
