--- a/instagram-app/src/components/PostContainer/PostContainer.css
+++ b/instagram-app/src/components/PostContainer/PostContainer.css
@@ -22,7 +22,7 @@
     display: flex;
     align-items: center;
     margin-left: 16px;
-    padding: 18px 0;
+    padding: 15px 0;
   }
 
   .post-header h2 {
@@ -48,7 +48,7 @@
   }
 
   .post-footer h3, h4, p, form {
-    padding-top: 14px;
+    padding-top: 12px;
   }
 
   .post form {
@@ -58,4 +58,14 @@
   .post form input {
     font-size: 1.6rem;
     font-weight: bold;
+  }
+
+  .logo {
+    width: 24px;
+    height: 24px;
+    margin-top: 12px;
+  }
+
+  .logo:hover {
+    cursor: pointer;
   }
