--- a/instagram-app/src/components/CommentSection/CommentSection.css
+++ b/instagram-app/src/components/CommentSection/CommentSection.css
@@ -7,3 +7,13 @@
 .comment p {
     margin-left: 4px;
 }
+
+.timestamp {
+    border-bottom: 1px solid #efeff0;
+    padding-bottom: 10px;
+    width: 100%;
+  }
+  
+  .comments {
+    width: 97%;
+  }
