--- a/instagram-app/src/components/Login/Login.css
+++ b/instagram-app/src/components/Login/Login.css
@@ -21,8 +21,18 @@
   
   .login input {
     width: 50%;
+    height: 30px;
+    border-radius: 6px;
+    border: 2px solid #e4e4e4;
+    padding: 2px 8px;
+    outline: none;
+    font-size: 1.6rem;
   }
   
+  .login input:focus {
+    border: 2px solid#d246d7;
+  }
+
   .login form {
     height: 200px;
     display: flex;
@@ -44,5 +54,5 @@
   .login button:hover {
     color: #d246d7;
     background-color: white;
-    border: 1px solid #d246d7;
+    border: 2px solid #d246d7;
   }
