--- a/instagram-app/src/components/PostContainer/PostContainer.css
+++ b/instagram-app/src/components/PostContainer/PostContainer.css
@@ -10,6 +10,7 @@
     border-radius: 4px;
     display: flex;
     flex-direction: column;
+    margin-bottom: 30px;
   } 
   
   .thumbnail {
@@ -58,9 +59,9 @@
 
   .post form input {
     font-size: 1.6rem;
-    font-weight: bold;
     border: none;
     width: 100%;
+    outline: none;
   }
 
   .logo {
