sytled components for some header/postcontainer and tried comment section to no avail

--- a/instagram-app/src/components/CommentSection/CommentSection.css
+++ b/instagram-app/src/components/CommentSection/CommentSection.css
@@ -1,8 +1,8 @@
-.comment {
+/* .comment {
     display:flex;
     flex-wrap: wrap;
     width: 100%;
-}
+} */
 
 .comment p {
     margin-left: 4px;
